--- a/configure.ac
+++ b/configure.ac
@@ -14,9 +14,9 @@ AC_CONFIG_MACRO_DIR([build-aux/m4])
 
 AC_CANONICAL_HOST
 
-AH_TOP([#ifndef AMS_CONFIG_H])
-AH_TOP([#define AMS_CONFIG_H])
-AH_BOTTOM([#endif //AMS_CONFIG_H])
+AH_TOP([#ifndef ELP_CONFIG_H])
+AH_TOP([#define ELP_CONFIG_H])
+AH_BOTTOM([#endif //ELP_CONFIG_H])
 
 dnl faketime breaks configure and is only needed for make. Disable it here.
 unset FAKETIME
